--- a/css/login.css
+++ b/css/login.css
@@ -89,15 +89,21 @@ body {
 .wrapper .btn {
     width: 100%;
     height: 45px;
-    background: white;
+    background-color:rgb(245, 243, 236);
     border: none;
     outline: none;
     border-radius: 30px;
-    box-shadow: 0 0 10px rgb(63, 62, 62);
+    box-shadow: 0 0 10px rgb(94, 92, 92);
     cursor: pointer;
     font-size: 16px;
     color: black;
     font-weight: 600;
+}
+
+.btn:hover{
+    background-color: rgb(252, 186, 79);
+    transition: 0.7s;
+
 }
 
 .wrapper .register-link {
