--- a/css/home.css
+++ b/css/home.css
@@ -2,6 +2,7 @@
 
 *{
     text-decoration: none;
+    box-sizing: border-box;
 }
 body{
     box-sizing: border-box;
@@ -20,7 +21,7 @@ body{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 4px 20px ;
+    padding: 2px 20px ;
 }
 
 .nav-logo{
@@ -62,7 +63,7 @@ li a:hover::after{
     width: 70%;
 }
 
-button{
+.nav-login{
     background-color: transparent;
     margin-left: 10px;
     padding: 8px 20px;
@@ -72,7 +73,7 @@ button{
     
 }
 
-button:hover{
+.nav-login:hover{
     background-color: rgb(252, 186, 79);
     transition: 0.7s;
 }
@@ -82,4 +83,128 @@ button:hover{
     height: 1.5px;
     border: 0 none;
     background-color:rgb(26, 45, 88) ;
+}
+
+.heading{
+    display: block;
+    text-align: center;
+    font-size: 90px;
+    font-weight: bold;
+    margin-top: 80px;
+    
+}
+
+.card{
+    display: flex;
+    justify-content:center;
+    align-items: center;
+    width: 360px;
+    height: 500px;
+    border-radius: 20px;
+    overflow: hidden;
+    border: 4px solid rgb(93, 95, 100);
+    position: relative;
+    color: rgb(245, 243, 236);
+    margin: 20px;
+}
+
+.card:hover .card-body{
+    right: 0;
+    transition: 0.8s;
+}
+
+.card-img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 15px;
+}
+
+.card-body{
+    width: 100%;
+    height: 100%;
+    top: 0;
+    right: -100%;
+    position: absolute;
+    background: #1f3d473b;
+    backdrop-filter: blur(5px);
+    border-radius: 15px;
+    padding: 25px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.card-title{
+    text-transform: uppercase;
+    font-size: 40px;
+    font-weight: 400px;
+}
+
+.card-info{
+    font-size: 20px;
+    line-height: 25px;
+    margin: 40px 0px;
+    font-weight: 400px;
+}
+
+.card-btn{
+    color: #1f3d47;
+    background: #8fabba;
+    padding: 10px 20px;
+    text-transform: capitalize;
+    border: none;
+    border-radius:8px;
+    outline: none;
+    font-weight: 500;
+    cursor: pointer;
+    width: 120px;
+}
+
+.menu-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 30px;   
+}
+
+.indian-food{
+    /* object-fit: cover; */
+    width: 70%;
+    height: 900px;
+    margin-left: 60px;
+    margin-right: -40px;
+    border-radius: 10px;
+}
+
+.paragraph{
+    margin: 40px;
+    padding: 197px 30px;
+    border: 2px solid rgb(26, 45, 88);
+    border-radius: 10px;
+    margin-left: 100px;
+}
+
+.menu-btn{
+    background-color: transparent;
+    margin-left: 10px;
+    padding: 10px 20px;
+    font-size: 17px;
+    /* font-weight: bold; */
+    border-radius: 3px;
+    border: 2px solid rgb(26, 45, 88);
+    width: 160px;
+    text-transform: uppercase;
+}
+
+.menu-btn:hover{
+    background-color: rgb(252, 186, 79);
+    transition: 0.7s;
+}
+
+#para{
+    margin: 60px;
+    display: flex;
+    justify-content: center;
+    text-align: center;
 }
