--- a/css/home.css
+++ b/css/home.css
@@ -161,3 +161,50 @@ li a:hover::after{
     width: 120px;
 }
 
+.menu-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 30px;   
+}
+
+.indian-food{
+    /* object-fit: cover; */
+    width: 70%;
+    height: 900px;
+    margin-left: 60px;
+    margin-right: -40px;
+    border-radius: 10px;
+}
+
+.paragraph{
+    margin: 40px;
+    padding: 197px 30px;
+    border: 2px solid rgb(26, 45, 88);
+    border-radius: 10px;
+    margin-left: 100px;
+}
+
+.menu-btn{
+    background-color: transparent;
+    margin-left: 10px;
+    padding: 10px 20px;
+    font-size: 17px;
+    /* font-weight: bold; */
+    border-radius: 3px;
+    border: 2px solid rgb(26, 45, 88);
+    width: 160px;
+    text-transform: uppercase;
+}
+
+.menu-btn:hover{
+    background-color: rgb(252, 186, 79);
+    transition: 0.7s;
+}
+
+#para{
+    margin: 60px;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+}
