--- a/css/home.css
+++ b/css/home.css
@@ -14,7 +14,7 @@ body{
 } 
 
 .container{
-    padding: 0px 15px;
+    padding: 0px 50px;
 }
 
 .nav-div{
@@ -112,6 +112,13 @@ li a:hover::after{
     
 }
 
+.card-box{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
 .card{
     display: flex;
     justify-content:center;
@@ -120,15 +127,16 @@ li a:hover::after{
     height: 500px;
     border-radius: 20px;
     overflow: hidden;
-    border: 4px solid rgb(93, 95, 100);
+    border: 3px solid rgb(26, 45, 88);
     position: relative;
     color: rgb(245, 243, 236);
     margin: 20px;
+    flex-wrap: wrap;
 }
 
 .card:hover .card-body{
     right: 0;
-    transition: 0.8s;
+    transition: 0.6s;
 }
 
 .card-img{
@@ -151,6 +159,7 @@ li a:hover::after{
     display: flex;
     flex-direction: column;
     justify-content: center;
+    transition: 0.6s;
 }
 
 .card-title{
@@ -200,7 +209,7 @@ li a:hover::after{
     padding: 197px 30px;
     border: 2px solid rgb(26, 45, 88);
     border-radius: 10px;
-    margin-left: 100px;
+    margin-left: 80px;
 }
 
 .menu-btn{
@@ -223,6 +232,25 @@ li a:hover::after{
 #para{
     margin: 60px;
     display: flex;
+    flex-wrap: nowrap;
     justify-content: center;
     text-align: center;
+}
+
+.happenings-img{
+    object-fit: cover;
+    width: 45%;
+    height: 800px;
+    margin-left: 10px;
+    margin-right: 40px;
+    /* margin-right: -40px; */
+    border-radius: 10px;
+}
+
+.paragraph2{
+    margin: 20px;
+    padding: 94px 30px;
+    border: 2px solid rgb(26, 45, 88);
+    border-radius: 10px;
+    margin-left: 40px;
 }
