--- a/css/reservation.css
+++ b/css/reservation.css
@@ -104,8 +104,8 @@ li a:hover::after{
 }
 header {
     background-color: #ff8533;
-    color: white;
-    padding: 50px 0;
+    color: black;
+    padding: 20px 0;
     text-align: center;
 }
 
