--- a/css/about_us.css
+++ b/css/about_us.css
@@ -118,10 +118,28 @@ h2:hover{
     font-size: 46px;
 
 }
+h3{
+    color:rgb(26, 45, 88);
+    transition-duration: 0.3s;
+    font-size: 30px;
+    margin-left: 20px;
 
+
+}
+h3:hover{
+    color:   rgb(252, 186, 79);
+    font-size: 32px;
+    margin-left: 30px;
+
+
+}
+p{
+    padding: 0%;
+    margin-left: 30px;
+}
 .img{
-    width: 1200px;
-    height: 400px;
+    width: 1220px;
+    height: 420px;
     border-radius: 10px;
 
     transition-duration: 0.3s;
@@ -129,8 +147,8 @@ h2:hover{
 }
 .img:hover{
     border-radius: 20px;
-    width: 1220px;
-    height: 420px;
+    width: 1240px;
+    height: 440px;
 
 }
 .image-container {
@@ -182,100 +200,45 @@ header nav a {
     align-items: center;
     color: #fff;
 }
-
-.story {
-    padding: 2em;
-}
-
-.team {
-    padding: 2em;
-}
-
-.team ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-}
-
-.team li {
-    margin-bottom: 20px;
-}
-
-.team img {
-    width: 100px;
-    height: 100px;
-    border-radius: 50%;
-}
-
-.games {
-    padding: 2em;
-}
-
-.games ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-}
-
-.games li {
-    margin-bottom: 20px;
-}
-
-#memory-match-game {
-    width: 400px;
-    height: 400px;
-    border: 1px solid #ccc;
+.card-container {
     display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-}
-
-#memory-match-game div {
-    width: 100px;
-    height: 100px;
-    background-color: #f0f0f0;
-    border: 1px solid #ccc;
-    display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
-    font-size: 24px;
-    cursor: pointer;
-}
+  }
+  
+  .card {
+    width: 25%;
+    margin: 10px;
+    border: 1px solid #ddd;
+    background-color:rgb(26, 45, 88) ;
 
-#recipe-scramble-game {
-    width: 400px;
-    height: 200px;
-    border: 1px solid #ccc;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-}
-
-#game-grid {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-gap: 10px;
-    width: 400px;
-    margin: 40px auto;
-}
-
-.food-card {
-    width: 100px;
-    height: 100px;
-    background-color: #f0f0f0;
-    border: 1px solid #ccc;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 24px;
-    cursor: pointer;
-}
-
-.food-card img {
-    width: 50px;
-    height: 50px;
-}
-
-.flipped {
-    transform: rotateY(180deg);
-}
+    border-radius: 10px;
+    box-shadow: 5px 7px 7px rgb(252, 186, 79);;
+  }
+  
+  .card img {
+    width: 100%;
+    height: 250px;
+    object-fit: cover;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+  }
+  
+  .card-info {
+    padding: 20px;
+    text-align: center;
+  }
+  
+  .card-info h2 {
+    font-size: 18px;
+    margin-bottom: 10px;
+  }
+  
+  .card-info p {
+    font-size: 14px;
+    color: rgb(252, 186, 79);
+  }
+  h4{
+    color: #f9f0f0;
+    font-size: 22px;
+  }
