--- a/css/about_us.css
+++ b/css/about_us.css
@@ -210,12 +210,24 @@ header nav a {
     width: 25%;
     margin: 10px;
     border: 1px solid #ddd;
+    box-shadow: 5px 7px 7px rgb(26, 45, 88);
+
     background-color:rgb(26, 45, 88) ;
 
     border-radius: 10px;
-    box-shadow: 5px 7px 7px rgb(252, 186, 79);;
+    transition-duration: 0.3s;
   }
-  
+  .card:hover{
+    width: 25%;
+    margin-bottom: 12px;
+    margin-top: 12px;
+    margin-right: 12px;
+    margin-left: 12px;
+
+
+    box-shadow: 5px 7px 7px rgb(252, 186, 79);
+
+  }
   .card img {
     width: 100%;
     height: 250px;
