--- a/css/maharashtrian-food.css
+++ b/css/maharashtrian-food.css
@@ -21,3 +21,32 @@ h2 {
     font-size: 28px;
     margin-bottom: 30px;
 }
+
+.menu-category {
+    margin-bottom: 30px;
+}
+
+.menu-category h3 {
+    font-size: 24px;
+    margin-bottom: 15px;
+}
+
+.menu-items {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+}
+
+.menu-item {
+    text-align: center;
+    max-width: 250px;
+    margin: 10px;
+}
+
+.menu-item img {
+    width: 100%;
+    height: 200px;
+    border-radius: 8px;
+    margin-bottom: 10px;
+    transition: transform 0.3s;
+}
