--- a/css/maharashtrian-food.css
+++ b/css/maharashtrian-food.css
@@ -50,3 +50,22 @@ h2 {
     margin-bottom: 10px;
     transition: transform 0.3s;
 }
+
+.menu-item img:hover {
+    transform: scale(1.05);
+    background-color: (252, 186, 79)
+}
+
+button {
+    padding: 8px 16px;
+    background-color: #3498db;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+button:hover {
+    background-color: #2980b9;
+}
