--- a/css/maharashtrian-food.css
+++ b/css/maharashtrian-food.css
@@ -1,12 +1,10 @@
 body {
     font-family: Arial, sans-serif;
     line-height: 1.6;
-    background-color: rgb(245, 243, 236);
+    background-color:rgb(245, 243, 236);
     color: #333;
+    font-family: 'poppins', sans-serif;
 }
-
-
-
 section#menu {
     max-width: 1200px;
     margin: 20px auto;
@@ -18,8 +16,11 @@ section#menu {
 
 h2 {
     text-align: center;
-    font-size: 28px;
+    font-size: 32px;
     margin-bottom: 30px;
+}
+.menu-title {
+    text-align: center;
 }
 
 .menu-category {
