--- a/css/reservation.css
+++ b/css/reservation.css
@@ -159,3 +159,9 @@ header {
     box-shadow: 0 5px 20px rgba(0, 0, 0, 0.1);
     margin-top: 40px;
 }
+.reservation-form-section h2 {
+    font-size: 36px;
+    margin-bottom: 30px;
+    color: rgb(26, 45, 88);
+    font-weight: bold;
+}
