--- a/css/reservation.css
+++ b/css/reservation.css
@@ -183,3 +183,13 @@ header {
             border: 1px solid #ccc;
             font-size: 16px;
         }
+        .reservation-form button {
+            background-color: rgb(26, 45, 88);
+            color: white;
+            border: none;
+            padding: 12px 25px;
+            font-size: 18px;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background-color 0.3s;
+        }
