--- a/css/reservation.css
+++ b/css/reservation.css
@@ -196,6 +196,18 @@ header {
         .reservation-form button:hover {
             background-color: rgb(252, 186, 79);
         }
+        .popup {
+            display: none; /* Initially hidden */
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.5);
+            justify-content: center;
+            align-items: center;
+            z-index: 1000;
+        }
         @media (max-width: 768px) {
             .reservation-form-section {
                 padding: 40px 15px;
