--- a/css/login.css
+++ b/css/login.css
@@ -10,7 +10,7 @@ body {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background:url('./../images/login-page/back.img.jpeg') no-repeat;
+    background:url('./../images/login_page/back.img.jpeg') no-repeat;
     height: 100vh;
     background-size: cover;
 }
