--- a/css/home.css
+++ b/css/home.css
@@ -3,6 +3,8 @@
 *{
     text-decoration: none;
     box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
 body{
     box-sizing: border-box;
@@ -13,94 +15,57 @@ body{
     font-family: 'poppins', sans-serif;
 } 
 
-.container{
-    padding: 0px 50px;
+nav{
+    background-color: white;
+    box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.1);
 }
-
-.nav-div{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 2px 20px ;
-}
-
-.nav-logo{
-    height: 80px;
-    cursor: pointer;
-}
-
-li{
-    list-style: none;
-    display: inline-block;
-    position: relative;
-}
-
-li a{
-    color:rgb(26, 45, 88) ;
-    font-size: 20px;
-    /* font-weight: bold; */
-    margin-right: 45px;
-    overflow: hidden;
-}
-
-li a:hover{
-    color:rgb(26, 45, 88) ;
-}
-li a::after{   
-    content: '';
-    position: absolute;
-    bottom: -5px;
-    left: 0;
-    width: 0%;
-    height: 2px;
-    background-color: rgb(26, 45, 88);
-    transition: all 0.5s;
-    pointer-events: none;
-    
-}
-
-li a:hover::after{
-    width: 70%;
-}
-
-.nav-login{
-    background-color: transparent;
-    margin-left: 10px;
-    padding: 8px 20px;
-    font-size: 17px;
-    /* font-weight: bold; */
-    border-radius: 3px;
-    cursor: pointer;
-}
-
-.nav-login:hover{
-    background-color: rgb(252, 186, 79);
-    box-shadow:  0 0 5px 0 black;
-    transition: 0.5s;
-}
-
-.nav-sign{
-    background-color: rgb(252, 186, 79);
-    margin-left: 10px;
-    padding: 8px 18px;
-    font-size: 17px;
-    font-weight: bold;
-    border-radius: 3px;
-    border: none;
-    cursor: pointer;
-    color: rgb(245, 243, 236);
-}
-
-.nav-sign:hover{
-    box-shadow:  0 0 5px 0 black;
-    transition: 0.4s;
-}
-
-.line{
+  nav ul{
     width: 100%;
-    height: 1.5px;
-    border: 0 none;
-    background-color:rgb(26, 45, 88) ;
+    list-style: none;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+}
+  nav li{
+    height: 50px;
+}
+  nav a{
+    height: 100%;
+    padding: 0 30px;
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+    color: black;
+}
+  nav a:hover{
+    background-color: #f0f0f0;
+}
+  nav li:first-child{
+    margin-right: auto;
+}
+  .sidebar{
+    position: fixed;
+    top: 0; 
+    right: 0;
+    height: 100vh;
+    width: 250px;
+    background-color: rgba(255, 255, 255, 0.15);
+    backdrop-filter: blur(12px);
+    box-shadow: -10px 0 10px rgba(0, 0, 0, 0.1);
+    list-style: none;
+    display: none;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+}
+  .sidebar li{
+    width: 100%;
+}
+  .sidebar a{
+    width: 100%;
+}
+  .menu-button{
+    display: none;
 }
 
 .heading{
@@ -117,6 +82,7 @@ li a:hover::after{
     display: flex;
     align-items: center;
     justify-content: space-around;
+    flex-wrap: wrap;
 }
 
 .card{
@@ -253,4 +219,164 @@ li a:hover::after{
     border: 2px solid rgb(26, 45, 88);
     border-radius: 10px;
     margin-left: 40px;
+}
+
+.footer-container{
+    padding: 50px;
+    margin: 0 60px;
+}
+
+.footer-content{
+    border-radius: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 500px;
+    width: 100%;
+    border: 2px solid  #8E2DE2;
+}
+
+.footer-email-subsciption{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.footer-input-email{
+    padding: 12px 30px;
+    text-align: center;
+    color: white;
+    border: none;
+    background-color: #000000;
+    border-radius: 5px;
+    margin: 10px; 
+    transition: 0.5s;
+}
+
+.footer-input-email:hover{
+    color: #8e2de2;
+}
+
+.footer-subscribe-button{
+    padding: 10px 12px;
+    color: #000000;
+    border: none;
+    border-radius: 5px;
+    transition: 0.5s;
+}
+
+.footer-subscribe-button:hover{
+    color: #8e2de2;
+}
+
+footer 
+{
+background-color:rgb(4, 15, 39);
+color: #fff;
+padding: 5px 0;
+text-align: center;
+font-family: Arial, sans-serif;
+}
+
+.footer-container-1 {
+display: flex;
+justify-content: space-around;
+flex-wrap: wrap;
+max-width: 1200px;
+margin: 0 auto;
+}
+
+.footer-section {
+flex: 1;
+margin: 20px;
+min-width: 250px;
+}
+
+.footer-section h2 {
+font-size: 20px;
+margin-bottom: 15px;
+border-bottom: 2px solid #fff;
+display: inline-block;
+padding-bottom: 5px;
+}
+
+.footer-section p,
+.footer-section ul {
+font-size: 14px;
+line-height: 1.8;
+}
+
+.footer-section ul {
+list-style: none;
+padding: 0;
+}
+
+.footer-section ul li {
+margin-bottom: 10px;
+}
+
+.footer-section ul li a {
+color: #fff;
+text-decoration: none;
+transition: color 0.3s;
+}
+
+/* .footer-section ul li a:hover {
+color: #8E2DE2;
+} */
+
+.footer-section .social-icons {
+margin-top: 20px;
+}
+
+.footer-section .social-icons a {
+color: #fff;
+margin: 0 10px;
+font-size: 18px;
+transition: color 0.3s;
+}
+
+/* .footer-section .social-icons a:hover {
+color: #8E2DE2;
+} */
+
+/* #quick-links{
+    display: flex;
+    flex-direction: column;
+    margin-left: 50px;
+} */
+
+
+@media only screen and (min-width: 601px) and (max-width: 768px) {
+    .menu-container{
+        flex-wrap: wrap;
+        display: block;
+    }
+
+    .menu-icon{
+        display: block;
+
+    }
+
+    .hideOnMobile{
+        display: none;
+      }
+      .menu-button{
+        display: block;
+      }
+}
+
+@media only screen and (max-width: 600px){
+    .menu-container{
+        flex-wrap: wrap;
+    }
+    .menu-icon{
+        display: block;
+
+    }
+
+    .sidebar{
+        width: 100%;
+      }
+    
 }
