--- a/css/about_us.css
+++ b/css/about_us.css
@@ -257,12 +257,12 @@ header nav a {
 
   .game-container1 {
     position: relative;
-    width: 500px;
-    height: 500px;
+    width: 400px;
+    height: 400px;
     margin: 50px auto;
   }
   
-  .card1 {
+  .card2 {
     position: relative;
     width: 100%;
     height: 100%;
@@ -271,14 +271,14 @@ header nav a {
     cursor: pointer;
   }
   
-  .card1-image {
+  .card2-image {
     width: 100%;
     height: 100%;
     object-fit: cover;
     border-radius: 10px;
   }
   
-  .card1-back {
+  .card2-back {
     position: absolute;
     top: 0;
     left: 0;
@@ -308,13 +308,13 @@ header nav a {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    
+
   }
   
   .game1-image {
-    width: 100px;
-    height: 100px;
-    margin: 10px;
+    width: 80px;
+    height: 80px;
+    margin: 5px;
     border: 1px solid #ddd;
     border-radius: 10px;
     cursor: pointer;
@@ -327,5 +327,48 @@ header nav a {
     border-radius: 10px;
   }
   
+  .card-container3 {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  
+  .card3 {
+    position: relative;
+    width: 270px;
+    height: 240px;
+    margin: 20px;
+    border: 1px solid #ddd;
+    border-radius: 10px;
+    overflow: hidden;
+  }
+  
+  .card3 img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    transition: opacity 0.5s;
+  }
+  
+  .card-info3 {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    color: #fff;
+    padding: 20px;
+    opacity: 0;
+    transition: opacity 0.5s;
+  }
+  
+  .card3:hover img {
+    opacity: 0.5;
+  }
+  
+  .card3:hover .card-info3 {
+    opacity: 1;
+  }
   
   
