--- a/css/punjabifood.css
+++ b/css/punjabifood.css
@@ -103,3 +103,92 @@ h2 {
 .btn:hover {
     background-color: #2980b9;
 }
+.container{
+    padding: 0px 50px;
+}
+
+.nav-div{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 2px 20px ;
+}
+
+.nav-logo{
+    height: 80px;
+    cursor: pointer;
+}
+
+li{
+    list-style: none;
+    display: inline-block;
+    position: relative;
+}
+
+li a{
+    color:rgb(26, 45, 88) ;
+    font-size: 20px;
+    /* font-weight: bold; */
+    margin-right: 45px;
+    overflow: hidden;
+}
+
+li a:hover{
+    color:rgb(26, 45, 88) ;
+}
+li a::after{   
+    content: '';
+    position: absolute;
+    bottom: -5px;
+    left: 0;
+    width: 0%;
+    height: 2px;
+    background-color: rgb(26, 45, 88);
+    transition: all 0.5s;
+    pointer-events: none;
+    
+}
+
+li a:hover::after{
+    width: 70%;
+}
+
+.nav-login{
+    background-color: transparent;
+    margin-left: 10px;
+    padding: 8px 20px;
+    font-size: 17px;
+    /* font-weight: bold; */
+    border-radius: 3px;
+    cursor: pointer;
+}
+
+.nav-login:hover{
+    background-color: rgb(252, 186, 79);
+    box-shadow:  0 0 5px 0 black;
+    transition: 0.5s;
+}
+
+.nav-sign{
+    background-color: rgb(252, 186, 79);
+    margin-left: 10px;
+    padding: 8px 18px;
+    font-size: 17px;
+    font-weight: bold;
+    border-radius: 3px;
+    border: none;
+    cursor: pointer;
+    color: rgb(245, 243, 236);
+}
+
+.nav-sign:hover{
+    box-shadow:  0 0 5px 0 black;
+    transition: 0.4s;
+}
+
+.line{
+    width: 100%;
+    height: 1.5px;
+    border: 0 none;
+    background-color:rgb(26, 45, 88) ;
+}
